--- a/locale/depfinder.pot
+++ b/locale/depfinder.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-10-02 21:47+0300\n"
+"POT-Creation-Date: 2009-10-02 22:20+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -78,5 +78,5 @@ msgstr ""
 
 #: depfinder:237
 #, sh-format
-msgid "ERROR: package requires libraries not found in the system"
+msgid "ERROR: package requires libraries not found in the system:"
 msgstr ""
