--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+version 1.1.1 (2009-11-17)
+  * Added French translation
+
 version 1.1.0 (2009-10-02)
   * Added localization support
   * Nicer "libraries not found" error message.
