Updated French translation

--- a/locale/fr.po
+++ b/locale/fr.po
@@ -45,21 +45,22 @@ msgstr ""
 "Utilisation : depfinder [OPTIONS] <paquet.tgz|.txz|.tlz|.tbz ou répertoire d'empaquetage>\n"
 "\n"
 "OPTIONS :\n"
-"    -f,          Affiche les dépendances vers un fichier splutôt que la sortie standard.\n"
-"                 Crée par défaut un ficher .dep. Voir aussi l'option -s.\n"
+"    -f,         Redirige l'affichage des dépendances vers un fichier plutôt qu'en sortie standard.\n"
+"                Crée par défaut un ficher .dep. Voir aussi l'option -s.\n"
 "    -s,         Affiche les dépendances avec des informations sur la version. Combiné à\n"
-"                 l'option -f, crée un fichier 'slack-required'.\n"
-"    -a,        Vérifie les fichiers dans l'arborescence courante plutôt qu'en se référant\n"
-"                 au FHS.\n"
-"    -j [jobs],   Le nombre de processus en parallèle que depfinder doit exécuter. Rapide\n"
-"                 s'il correspond au nombre de vos processeurs/cœurs.\n"
-"                 (par défaut : 1)\n"
+"                l'option -f, crée un fichier 'slack-required'.\n"
+"    -a,         Vérifie les fichiers dans l'arborescence courante plutôt qu'en se référant\n"
+"                au FHS.\n"
+"    -j [jobs],  Le nombre de processus en parallèle que depfinder doit exécuter. Rapide\n"
+"                s'il correspond au nombre de vos processeurs/cœurs.\n"
+"                (par défaut : 1)\n"
 "    -v,         Affiche la version.\n"
 "    -h,         Affiche cette aide.\n"
 "\t\n"
 "VARIABLES D'ENVIRONNEMENT :\n"
-"  Vous pouvez spécifier via une liste d'ntrées séparées par des virgules ou des espaces\n"
-"  les dépendance sà ajouter ou bien à exclure des rapports de depfinder (noms de paquets  uniquement, sans la version) :\n"
+"  Vous pouvez spécifier via une liste d'entrées, séparées par des virgules ou des espaces,\n"
+"  les dépendances à ajouter ou bien à exclure des rapports de depfinder (noms de paquets 
+"  uniquement, sans la version) :\n"
 "    ADD\n"
 "    EXCLUDE"
 
