--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 version 1.1.2 (2009-11-18)
-  * Fixed some string in the French translation
+  * Fixed some strings in the French translation
 
 version 1.1.1 (2009-11-17)
   * Added French translation
