--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+version 1.1.3 (2009-11.18)
+  * Fixed more things in the French translation
+
 version 1.1.2 (2009-11-18)
   * Fixed some strings in the French translation
 
