--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
-version 1.1.3 (2009-11.18)
+version 1.1.4 (2009-12-05)
+  * Fixed extraction of txz packages that was broken with xz-4.999.9beta
+
+version 1.1.3 (2009-11-18)
   * Fixed more things in the French translation
 
 version 1.1.2 (2009-11-18)
