Updated man page

--- a/man/depfinder.man
+++ b/man/depfinder.man
@@ -12,9 +12,9 @@ depfinder \- a tool that finds dependencies of slackware packages
 .P
 \fBdepfinder\fR is a tool that finds the dependencies of Slackware packages.
 It examines binary files in the packages and the libraries they link to and
-reports the packages these libraries belong to in a dependency list. 
-This dependency list is by default being output to a comma separated
-list, without version information, but there are options to output
+reports the packages these libraries belong to in a dependency list.
+The dependencies are by default being output to a comma separated
+list without version information, but there are options to output
 dependencies with version information and to a file: a .dep file
 with a comma separated list without version information, or a
 \fIslack\-required\fR file that includes version information.
@@ -27,24 +27,24 @@ package contents extracted.
 
 .P
 \fBdepfinder\fR uses \fBldd\fR for discovering dependencies, so it will only find
-dependencies of binary files, scripts (bash,
+dependencies of binary files. Scripts (bash,
 python, etc) are not supported in any way.
 
 .P
 If a certain library is included in more than one packages, then all
-packages that include it will be listed in one entry, using an "or"
+packages that include it will be listed in one entry using an "or"
 statement (which is expressed with the pipe symbol: "|"). For example a
 dependency for a library that is included in both \fIopenssl\fR and
 \fIopenssl\-solibs\fR packages will be output as:
-\fIopenssl|openssl\-solibs\fR
+\fIopenssl|openssl\-solibs\fR.
 
 .P
 You need to have all required dependencies for any package you run
 \fBdepfinder\fR on installed in your system. That will of course always be
 the case when you are building your own packages. In case there is a
 library that is required by a package you run \fBdepfinder\fR on that is
-missing from your system, depfinder will report that library and will
-not provide any dependency report. 
+missing from your system, \fBdepfinder\fR will report the missing library
+and will not generate a dependency list.
 
 .P
 \fBdepfinder\fR also has support for running multiple jobs which makes it
@@ -60,20 +60,20 @@ information. See also \fB\-s\fR.
 .P
 \fB\-s\fR,
 Outputs dependencies including version information. Dependencies will be
-listed in the format following this example: "zlib >= 1.2.3\-i486\-2". If 
+listed in the format following this example: "zlib >= 1.2.3\-i486\-2". If
 combined with \fB\-f\fR, it creates a slack\-required file which can be
-placed inside the package under the \fIinstall\fR directory. 
+placed inside the package under the \fIinstall\fR directory.
 
 .P
 \fB\-a\fR,
 Checks all files in the directory tree instead of following the FHS. If
 \fB\-a\fR is not used then depfinder looks for binary files only under
-\fI/sbin\fR ,\fI/usr/sbin\fR, \fI/usr/bin\fR, \fIbin\fR, \fI/usr/libexec\fR and
+\fI/sbin\fR ,\fI/usr/sbin\fR, \fI/usr/bin\fR, \fI/bin\fR, \fI/usr/libexec\fR and
 \fI/usr/lib\fR, \fI/lib\fR or \fI/usr/lib64\fR, \fI/lib64\fR for 32\-bit and
 64\-bit architectures respectively. If \fB\-a\fR is used, then depfinder
 searches for files dynamically linking to libraries anywhere inside the
-package. It could be usefull if the installation scripts put binaries in
-a non\-standard location.
+package. This option could be usefull if the installation scripts put
+binaries in a non\-standard location.
 
 .P
 \fB\-j\fR \fIjobs\fR,
