--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+version 1.3.0 (2010-01-28)
+  * Added support for detecting python dependencies
+
 version 1.2.2 (2009-12-24)
   * Fixed a bug where no dependencies were displayed when the number of
     jobs was larger than the number of libraries included in the
