--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+version 1.3.1 (2010-02-26)
+  * Added Brazilian Portuguese translation
+
 version 1.3.0 (2010-01-28)
   * Added support for detecting python dependencies
 
