--- a/po/uk.po
+++ b/po/uk.po
@@ -2,8 +2,7 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: Nameday\n"
@@ -15,7 +14,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\\n\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\\n\\n\n"
 
 #: ../depfinder:41
 #, sh-format
@@ -38,6 +37,23 @@ msgid ""
 "    -v,          Show version information\n"
 "    -h,          This help message"
 msgstr ""
+"depfinder: знаходить залкжності серед пакетів Slackware\n"
+"\n"
+"використання: depfinder [ОПЦІЇ] <пакет.tgz|.txz|.tlz|.tbz або тека пакету>\n"
+"\n"
+"ОПЦІЇ:\n"
+" -f, Виводити залкжності в файл замість в stdout.\n"
+" По замовчуванню створюється файл .dep . Дивись також -s.\n"
+" -s, Виводить залежності з інформацією про версію. Якщо\n"
+" використовується з -f, створюється файл, що вимагається Slack`ом\n"
+" -a, Перевіряє всі файли в дереві теки замість\n"
+" наступних FHS\n"
+" -p, Спроби визначити залежності python’а.\n"
+" -j [роботи], Кількість запущених паралельних робіт depfinder’а. Пришвидшує роботу,\n"
+" якщо збігається з кількістю Ваших CPU/ядер\n"
+" (по замовчуванню: 1)\n"
+" -v, Показує інформацію про версію\n"
+" -h, Ця допомога"
 
 #: ../depfinder:64
 #, sh-format
@@ -45,6 +61,8 @@ msgid ""
 "depfinder version $VERSION (c) 2009 George Vlahavas\n"
 "Run \"depfinder -h\" for help information"
 msgstr ""
+"depfinder версія $VERSION (c) 2009 George Vlahavas\n"
+"Запустіть \"depfinder -h\" для допомоги"
 
 #: ../depfinder:105
 #, sh-format
@@ -54,29 +72,29 @@ msgstr "ПРМИЛКА: Не знайдено аргументів."
 #: ../depfinder:143
 #, sh-format
 msgid "ERROR: Number of jobs must be greater than one"
-msgstr ""
+msgstr "ПОМИЛКА: Число робіт повинно бути більше ніж один"
 
 #: ../depfinder:161
 #, sh-format
 msgid "ERROR: Too many arguments"
-msgstr ""
+msgstr "ПОМИЛКА: Забагато аргументів"
 
 #: ../depfinder:168
 #, sh-format
 msgid "ERROR: $arg not found"
-msgstr ""
+msgstr "ПОМИЛКА: $arg не знайдено"
 
 #: ../depfinder:179
 #, sh-format
 msgid "ERROR: $arg is not a package file or a directory!"
-msgstr ""
+msgstr "ПОМИЛКА: $arg не є файлом пакету або текою!"
 
 #: ../depfinder:300
 #, sh-format
 msgid "WARNING: python module $i not found."
-msgstr ""
+msgstr "ПОПЕРЕДЖЕННЯ: модуль python`а $i не знайдено. "
 
 #: ../depfinder:326
 #, sh-format
 msgid "ERROR: package requires libraries not found in the system:"
-msgstr ""
+msgstr "ПОМИЛКА: пакет вимагає бібіліотеки, які не знайдені в системі:"
