--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 version 1.3.3 
+  * Added Ukranian translation
+  * Added Dutch translation
   * Added Polish translation
   * Updated Danish and Italian translations
 
