--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
-version 1.3.3 
+version 1.3.3  (2010-05-20)
+  * Fixed broken detection of included libraries
   * Added Ukranian translation
   * Added Dutch translation
   * Added Polish translation
