--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-version 1.3.3  (2010-05-20)
+version 1.3.4 (2010-05-24)
+  * Fixed a bug that would make depfinder run forever if it encountered
+    a python file with spaces in its filename.
+
+version 1.3.3 (2010-05-20)
   * Fixed broken detection of included libraries
   * Added Ukranian translation
   * Added Dutch translation
