--- a/po/it.po
+++ b/po/it.po
@@ -2,21 +2,20 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 msgid ""
 msgstr ""
-"Project-Id-Version: DepFinder\n"
+"Project-Id-Version: depfinder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-01-28 13:19+0200\n"
-"PO-Revision-Date: 2010-03-30 17:28+0100\n"
-"Last-Translator: Mattia Tristo <mattia.tristo@gmail.com>\n"
-"Language-Team: \n"
+"PO-Revision-Date: 2011-01-09 15:51+0000\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: Italian <None>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Italian\n"
-"X-Poedit-Country: ITALY\n"
-"X-Poedit-SourceCharset: utf-8\n"
+"Language: it\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #: ../depfinder:41
 #, sh-format
@@ -100,4 +99,3 @@ msgstr "ATTENZIONE: modulo python $i non trovato."
 #, sh-format
 msgid "ERROR: package requires libraries not found in the system:"
 msgstr "ERRORE: il pacchetto richiede delle librerie non trovate nel sistema:"
-
