--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1,21 +1,21 @@
-# translation of depfinder-pt_BR.po to Português do Brasil
+# SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
-# Phantom X <megaphantomx at bol.com.br>, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: depfinder-pt_BR\n"
+"Project-Id-Version: depfinder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-01-28 13:19+0200\n"
-"PO-Revision-Date: 2010-01-30 00:08-0200\n"
-"Last-Translator: Phantom X <megaphantomx at bol.com.br>\n"
-"Language-Team: Português do Brasil <pt@li.org>\n"
+"PO-Revision-Date: 2011-01-09 15:50+0000\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: KBabel 1.11.4\n"
+"Language: pt_BR\n"
+"Plural-Forms: nplurals=2; plural=(n > 1)\n"
 
 #: ../depfinder:41
 #, sh-format
