--- a/po/ja.po
+++ b/po/ja.po
@@ -1,16 +1,21 @@
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# 
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: depfinder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-01-28 13:19+0200\n"
-"PO-Revision-Date: \n"
-"Last-Translator: tsuren <hydrangea_and_snail@hotmail.com>\n"
-"Language-Team: \n"
+"PO-Revision-Date: 2011-02-09 19:23+0000\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Japanese\n"
-"X-Poedit-Country: JAPAN\n"
+"Language: ja\n"
+"Plural-Forms: nplurals=1; plural=0\n"
 
 #: ../depfinder:41
 #, sh-format
@@ -94,4 +99,3 @@ msgstr "注意: python のモジュール、 $i、 がみつかりません。"
 #, sh-format
 msgid "ERROR: package requires libraries not found in the system:"
 msgstr "エラー：パッケージの必要としているライブラリーが、システムにインストールされていません。"
-
