--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 version 1.3.8 (2011-02-13):
-  * Fixed a bug which accidentaly removed the package's name from the
+  * Fixed a bug which accidentally removed the package's name from the
     dependency list, if the name was part of the dependency.
 
 version 1.3.7 (2011-02-12):
