--- a/po/el.po
+++ b/po/el.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: depfinder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-01-28 13:19+0200\n"
-"PO-Revision-Date: 2011-02-09 19:22+0000\n"
+"PO-Revision-Date: 2011-03-16 17:14+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -73,7 +73,9 @@ msgstr "ΣΦΑΛΜΑ: Δεν βρέθηκαν παράμετροι"
 #: ../depfinder:143
 #, sh-format
 msgid "ERROR: Number of jobs must be greater than one"
-msgstr "ΣΦΑΛΜΑ: Ο αριθμός των εργασιών (jobs) πρέπει να είναι ίσος ή μεγαλύτερος του 1"
+msgstr ""
+"ΣΦΑΛΜΑ: Ο αριθμός των εργασιών (jobs) πρέπει να είναι ίσος ή μεγαλύτερος του"
+" 1"
 
 #: ../depfinder:161
 #, sh-format
