--- a/po/fr.po
+++ b/po/fr.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: depfinder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-01-28 13:19+0200\n"
-"PO-Revision-Date: 2011-02-09 19:23+0000\n"
+"PO-Revision-Date: 2011-03-16 17:14+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -98,4 +98,6 @@ msgstr "ATTENTION: Le module python $i n'a pas été trouvé"
 #: ../depfinder:326
 #, sh-format
 msgid "ERROR: package requires libraries not found in the system:"
-msgstr "ERREUR : le paquet nécessite des bibliothèques introuvables sur votre système :"
+msgstr ""
+"ERREUR : le paquet nécessite des bibliothèques introuvables sur votre "
+"système :"
