--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 version 1.3.9 (2011-03-16):
-  * Fixed a rarely occuring bug with not reading including libraries
+  * Fixed a rarely occurring bug with not reading included libraries
     properly.
 
 version 1.3.8 (2011-02-13):
