--- a/po/it.po
+++ b/po/it.po
@@ -1,16 +1,15 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 msgid ""
 msgstr ""
 "Project-Id-Version: depfinder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-01-28 13:19+0200\n"
-"PO-Revision-Date: 2011-03-16 17:14+0000\n"
+"PO-Revision-Date: 2011-08-21 18:24+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: Italian <None>\n"
+"Language-Team: Italian (http://www.transifex.net/projects/p/depfinder/team/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -99,3 +98,5 @@ msgstr "ATTENZIONE: modulo python $i non trovato."
 #, sh-format
 msgid "ERROR: package requires libraries not found in the system:"
 msgstr "ERRORE: il pacchetto richiede delle librerie non trovate nel sistema:"
+
+
