--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1,15 +1,15 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# phantomx <megaphantomx@bol.com.br>, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: depfinder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-01-28 13:19+0200\n"
-"PO-Revision-Date: 2011-03-16 17:14+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2011-04-12 01:29+0000\n"
+"Last-Translator: phantomx <megaphantomx@bol.com.br>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -50,8 +50,8 @@ msgstr ""
 "    -a,          Verifica todos os arquivos numa ávore de diretório em vez de\n"
 "                 seguir o FHS\n"
 "    -p,          Tenta detectar dependências python.\n"
-"    -j [jobs],   O número de jobs paralelos do depfinder para executar. Mais rápido\n"
-"                 se for o mesmo de número de seus CPUs/cores\n"
+"    -j [jobs],   O número de jobs paralelos do depfinder para executar. Mais\n"
+"                 rápido se for o mesmo de número de seus CPUs/cores\n"
 "                 (padrão: 1)\n"
 "    -v,          Exibir informação de versão\n"
 "    -h,          Esta mensagem de ajuda"
@@ -93,9 +93,11 @@ msgstr "ERRO: $arg não é um pacote ou um diretório!"
 #: ../depfinder:300
 #, sh-format
 msgid "WARNING: python module $i not found."
-msgstr "AVISO: módulo python $i não encontrado"
+msgstr "AVISO: módulo python $i não encontrado."
 
 #: ../depfinder:326
 #, sh-format
 msgid "ERROR: package requires libraries not found in the system:"
 msgstr "ERRO: pacote requer bibliotecas não encontradas no sistema:"
+
+
